--- a/carousel.css
+++ b/carousel.css
@@ -5,7 +5,7 @@
 body {
   padding-top: 3rem;
   padding-bottom: 3rem;
-  color: rgb(var(--bs-tertiary-color-rgb));
+  background-color: rgb(7, 87, 7);
 }
 
 
