--- a/carousel.css
+++ b/carousel.css
@@ -15,6 +15,7 @@ body {
 /* Carousel base class */
 .carousel {
   margin-bottom: 4rem;
+background-color:rgb(34, 198, 201)
 }
 /* Since positioning the image, we need to help out the caption */
 .carousel-caption {
@@ -66,6 +67,7 @@ body {
   /* Bump up size of carousel content */
   .carousel-caption p {
     margin-bottom: 1.25rem;
+    font-style: normal;
     font-size: 1.25rem;
     line-height: 1.4;
   }
